--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -67,3 +67,10 @@ vich_uploader:
             inject_on_load: false
             delete_on_update: true
             delete_on_remove: true
+
+        divers:
+            uri_prefix: /images/divers
+            upload_destination: '%kernel.project_dir%/public/images/divers'
+            inject_on_load: false
+            delete_on_update: true
+            delete_on_remove: true
