--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -74,3 +74,17 @@ vich_uploader:
             inject_on_load: false
             delete_on_update: true
             delete_on_remove: true
+        
+        photoIdentite:
+            uri_prefix: /images/photo_identite
+            upload_destination: '%kernel.project_dir%/public/images/photo_identite'
+            inject_on_load: false
+            delete_on_update: true
+            delete_on_remove: true
+
+        passeport:
+            uri_prefix: /images/passeport
+            upload_destination: '%kernel.project_dir%/public/images/passeport'
+            inject_on_load: false
+            delete_on_update: true
+            delete_on_remove: true
