ajout du mode de paiement monetico

--- a/.env
+++ b/.env
@@ -43,3 +43,21 @@ DATABASE_URL=mysql://root:0676018700@127.0.0.1:3306/visas
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=gmail://sghairipro63@gmail.com:uqoxqrfmjmqdcniv@localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> monetico ###
+
+MONETICOPAIEMENT_KEY=12345678901234567890123456789012345678P0
+MONETICOPAIEMENT_EPTNUMBER=6414373
+MONETICOPAIEMENT_VERSION=3.0
+MONETICOPAIEMENT_URLSERVER=https://p.monetico-services.com/test/
+MONETICOPAIEMENT_COMPANYCODE=Q6GOPYVISAEN
+MONETICOPAIEMENT_URLOK=https://www.bulledevoyages.com/paiements/accepter
+MONETICOPAIEMENT_URLKO=https://www.bulledevoyages.com/paiements/refuser
+
+MONETICOPAIEMENT_CTLHMAC=V%s.sha1.php--[CtlHmac%s%s]-%s
+MONETICOPAIEMENT_CTLHMACSTR=CtlHmac%s%s
+MONETICOPAIEMENT_PHASE2BACK_RECEIPT=version=2\ncdr=%s
+MONETICOPAIEMENT_PHASE2BACK_MACOK=0
+MONETICOPAIEMENT_PHASE2BACK_MACNOTOK=1\n
+MONETICOPAIEMENT_URLPAYMENT=paiement.cgi
+###< monetico ###
