--- a/.env
+++ b/.env
@@ -50,7 +50,7 @@ MONETICOPAIEMENT_KEY=08E265EE5CA8D6F99561B10F2B56198D2E34D49C
 MONETICOPAIEMENT_EPTNUMBER=6414373
 MONETICOPAIEMENT_VERSION=3.0
 MONETICOPAIEMENT_URLSERVER=https://p.monetico-services.com/test/
-MONETICOPAIEMENT_COMPANYCODE=VISA-EN-LIGNE
+MONETICOPAIEMENT_COMPANYCODE=visaenlign
 MONETICOPAIEMENT_URLOK=https://www.bulledevoyages.com/paiements/accepter
 MONETICOPAIEMENT_URLKO=https://www.bulledevoyages.com/paiements/refuser
 
@@ -61,3 +61,7 @@ MONETICOPAIEMENT_PHASE2BACK_MACOK=0
 MONETICOPAIEMENT_PHASE2BACK_MACNOTOK=1\n
 MONETICOPAIEMENT_URLPAYMENT=paiement.cgi
 ###< monetico ###
+###> knplabs/knp-snappy-bundle ###
+WKHTMLTOPDF_PATH=%kernel.root_dir%/../vendor/h4cc/wkhtmltopdf-amd64/bin/wkhtmltopdf-amd64
+WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
+###< knplabs/knp-snappy-bundle ###
