--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "brinley/jsignature": "^2.1",
         "friendsofsymfony/ckeditor-bundle": "^2.2",
         "friendsofsymfony/jsrouting-bundle": "^2.5",
+        "h4cc/wkhtmltopdf-amd64": "^0.12.4",
         "knplabs/knp-paginator-bundle": "^5.1",
+        "knplabs/knp-snappy-bundle": "^1.7",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
